--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@fontsource/poppins": "^5.2.6",
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.2",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.23.12",
+    "joi": "^18.0.1",
+    "jose": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.542.0",
+    "mongoose": "^8.18.1",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -24,6 +29,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.12",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
