--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.2.1",
     "swiper": "^11.2.10",
     "zod": "^4.1.8"
   },
