--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/poppins": "^5.2.6",
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.2",
+    "@lottiefiles/dotlottie-react": "^0.17.2",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -21,11 +22,13 @@
     "joi": "^18.0.1",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
     "mongoose": "^8.18.1",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^3.2.1",
     "swiper": "^11.2.10",
     "uuid": "^13.0.0",
