--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "joi": "^18.0.1",
     "jose": "^6.1.0",
@@ -27,6 +28,7 @@
     "mongoose": "^8.18.1",
     "next": "15.4.6",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.2.1",
