--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.2.1",
+    "slugify": "^1.6.6",
     "swiper": "^11.2.10",
     "uuid": "^13.0.0",
     "zod": "^4.1.8"
