--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "recharts": "^3.2.1",
     "slugify": "^1.6.6",
     "swiper": "^11.2.10",
+    "swr": "^2.3.6",
     "uuid": "^13.0.0",
     "zod": "^4.1.8"
   },
