--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "recharts": "^3.2.1",
+    "simple-icons": "^15.16.1",
     "slugify": "^1.6.6",
     "swiper": "^11.2.10",
     "swr": "^2.3.6",
