feat: integrate Google OAuth for user authentication and add payment confirmation email functionality
- Added Google API client to package.json for OAuth integration.
- Implemented Google OAuth login route to handle user authentication and session creation.
- Created a new route for handling Google access tokens and user profile retrieval.
- Enhanced webhook route to send payment confirmation emails upon successful order processing.
- Developed email templates for order payment confirmation, status updates, and payment failures.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cloudinary": "^2.7.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "googleapis": "^164.1.0",
     "joi": "^18.0.1",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
