--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lucide-react": "^0.542.0",
     "mongoose": "^8.18.1",
     "next": "15.4.6",
-    "nodemailer": "^7.0.6",
+    "next-auth": "^5.0.0-beta.29",
+    "nodemailer": "^6.10.1",
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
