--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lucide-react": "^0.542.0",
     "mongoose": "^8.18.1",
     "next": "15.4.6",
-    "next-auth": "^5.0.0-beta.29",
+    "next-auth": "^4.24.13",
     "nodemailer": "^6.10.1",
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
